spacing fixes

--- a/styles.css
+++ b/styles.css
@@ -34,7 +34,7 @@
   margin-block-end: 1rem;
   position: relative;
   margin-top: -1px;
-  margin-bottom: 0;
+  margin-bottom: 1.8em;
   border-bottom: 1px solid black;
   background-color: #f0eeeb;
 }
@@ -88,7 +88,7 @@
 }
 
 .quarto-title-meta {
-  padding-bottom: 1.8em;
+  margin-bottom: 2.5em;
 }
 
 #title-block-header.quarto-title-block.default .quarto-title-meta-heading {
@@ -111,7 +111,7 @@
 
 /*-- main content --*/
 body.nav-fixed {
-  padding-top: 105px;
+  padding-top: auto;
   background-color: #f0eeeb;
 }
 
@@ -119,7 +119,11 @@ body.nav-fixed {
   background-color: #f0eeeb;
 }
 
-@media (max-width: 991.98px) {
+#quarto-content>* {
+  padding-top: 0;
+}
+
+/* @media (max-width: 991.98px) {
   #quarto-content {
       padding-top: 1em;
       padding-bottom: 0;
@@ -131,7 +135,7 @@ body.nav-fixed {
     padding-top: 2.5em;
     padding-bottom: 0;
   }
-}
+} */
 
 h2.anchored {
   margin-bottom: 0;
